fix: z-index of chat assistant

--- a/src/components/templates/Chat/Chat.module.css
+++ b/src/components/templates/Chat/Chat.module.css
@@ -11,7 +11,7 @@
 	top: 0;
 	right: 0;
 	bottom: 0;
-	z-index: var(--zindex-fixed);
+	z-index: var(--zindex-popover);
 	transform-origin: right bottom;
 }
 @media (min-width: 48em) {
